@@ -1,7 +1,7 @@
 {
   "name": "simp-sudo",
-  "version": "4.1.3",
-  "author": "simp",
+  "version": "5.0.0",
+  "author": "SIMP Team",
   "summary": "Manage sudo",
   "license": "Apache-2.0",
   "source": "https://github.com/simp/pupmod-simp-sudo",
@@ -14,11 +14,15 @@
   "dependencies": [
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 1.3.1 < 2.0.0"
+      "version_requirement": ">= 2.0.0 < 3.0.0"
     },
     {
       "name": "simp/simpcat",
-      "version_requirement": ">= 5.0.1 < 6.0.0"
+      "version_requirement": ">= 6.0.0 < 7.0.0"
+    },
+    {
+      "name": "simp/rsync",
+      "version_requirement": ">= 5.0.0 < 6.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
