@@ -7,7 +7,7 @@ describe 'sudo::user_specification' do
   let(:params) { {:user_list => 'joe, jimbob, %foo', :cmnd => ['ifconfig']} }
 
   it do
-    should contain_concat_fragment('sudoers+user_specification_spec.uspec') \
+    should contain_simpcat_fragment('sudoers+user_specification_spec.uspec') \
       .with_content(/.*joe, jimbob, %foo(\s*|.*)PASSWD.*EXEC.*ifconfig/)
   end
 
